--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 </head>
 <body>
     <header class="py-3">
-        <div class="container column align-items-center">
+        <div class="container">
             <img src="images/logo/Union.png" class="ag-logo" alt="agape">
+        </div>
+    </header>
+    <main class="container">
+        <div class="pt-3 d-flex justify-content-between">
+            <div class="bg-dark text-white">
+                <p>demonstração LTDA</p>
+            </div>
             <div>
                 <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
@@ -25,8 +32,6 @@
                 </button>
             </div>
         </div>
-    </header>
-    <main class="container">
         <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
             <div class="search-box">
                 <form>
