--- a/index.html
+++ b/index.html
@@ -11,15 +11,8 @@
 </head>
 <body>
     <header class="py-3">
-        <div class="container">
+        <div class="container d-flex justify-content-between align-items-center">
             <img src="images/logo/Union.png" class="ag-logo" alt="agape">
-        </div>
-    </header>
-    <main class="container">
-        <div class="pt-3 d-flex justify-content-between">
-            <div class="bg-dark text-white">
-                <p>demonstração LTDA</p>
-            </div>
             <div>
                 <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
@@ -31,6 +24,11 @@
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
+        </div>
+    </header>
+    <main class="container">
+        <div class="pt-3 border">
+            <p>demonstração LTDA</p>
         </div>
         <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
             <div class="search-box">
