--- a/ag-dam.html
+++ b/ag-dam.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
     <link rel="stylesheet" href="css/portal.css">
+    <link rel="stylesheet" href="css/dam.css">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
     <title>2º Via DAM</title>
 </head>
