--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <header class="py-3">
         <div class="container d-flex justify-content-between align-items-center">
             <img src="images/logo/Union.png" class="ag-logo" alt="agape">
+        </div>
+    </header>
+    <main class="container">
+        <div class="pt-3 d-flex justify-content-between align-items-center">
+            <div class="gov-logo--container">
+                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
+            </div>
             <div>
                 <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
@@ -24,11 +31,6 @@
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
-        </div>
-    </header>
-    <main class="container">
-        <div class="pt-3 border">
-            <p>demonstração LTDA</p>
         </div>
         <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
             <div class="search-box">
