--- a/index.html
+++ b/index.html
@@ -1,93 +1,62 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/portal.css">
-    <title>Portal do Contribuinte</title>
+    <title>Início</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+        
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Rubik", sans-serif;
+            font-size: 1.125rem;
+        }
+
+        html{
+            background: linear-gradient(to top, #022C90 0%, #2765D9 100%);
+            height: 100dvh;
+        }
+
+        .ag-logo{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 25vw;
+            max-width: 250px;
+        }
+
+        .btn{
+            display: flex;
+            align-items: center;
+            gap: .5em;
+            color: #fff;
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            border: 1px solid #fff;
+            padding: .5em;
+            border-radius: 4px;
+            box-shadow: 0px 1px 1px #000;
+            margin: .5em;
+        }
+
+        .btn:hover{
+            opacity: .5;
+        }
+    </style>
 </head>
 <body>
-    <header class="py-3">
-        <div class="container d-flex justify-content-between align-items-center">
-            <img src="images/logo/Union.png" class="ag-logo" alt="agape">
-        </div>
-    </header>
-    <main class="container">
-        <div class="pt-3 d-flex justify-content-between ali">
-            <div class="gov-logo--container">
-                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
-            </div>
-            <div>
-                <button class="a11y-button">
-                    <i class="bi bi-zoom-out"></i>
-                </button>
-                <button class="a11y-button">
-                    <i class="bi bi-circle-half"></i>
-                </button>
-                <button class="a11y-button">
-                    <i class="bi bi-zoom-in"></i>
-                </button>
-            </div>
-        </div>
-        <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
-            <div class="search-box">
-                <form>
-                    <input type="text" id="input-busca" placeholder="Pesquisar">
-                </form>
-                <i class="bi bi-search"></i>
-            </div>
-            <h6 class="grid-title">Portal do contribuinte</h6>
-        </div>
-        <section class="grid__section">
-        </section>
-    </main>
-    <footer class="container column align-items-center pt-3">
-        <div class="w-50">
-            <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
-            <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
-        </div>
-        <p class="footer-text">Ágape © Copyright 2024</p>
-    </footer>
-    <!-- MODAL -->
-    <div class="a11y-modal">
-        <button class="btn btn-info" data-bs-toggle="modal" data-bs-target=".modal">
-            <i class="bi bi-universal-access-circle text-white"></i>
-        </button>
-    </div>
-    <div class="modal fade" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">O que são esses botões?</h4>
-                    <button class="btn-close" data-bs-dismiss="modal"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="pt-1">
-                        <button class="a11y-button">
-                            <i class="bi bi-zoom-out"></i>
-                        </button>
-                        <span>Lorem ipsum dolor sit amet</span>
-                    </div>
-                    <div class="pt-1">
-                        <button class="a11y-button">
-                            <i class="bi bi-zoom-in"></i>
-                        </button>
-                        <span>Lorem ipsum dolor sit amet</span>
-                    </div>
-                    <div class="pt-1">
-                        <button class="a11y-button">
-                            <i class="bi bi-circle-half"></i>
-                        </button>
-                        <span>Lorem ipsum dolor sit amet</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> 
-    <script src="js/portal.js"></script>
-    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+    <img src="images/logo/Union.png" alt="agape-logo" class="ag-logo">
+    
+        <a href="ag-contribuinte.html">
+            <p class="btn">
+                Entrar
+                <img src="images/entrar.png"/>
+            </p>
+        </a>
 </body>
 </html>
