--- a/ag-dam.html
+++ b/ag-dam.html
@@ -11,32 +11,58 @@
     <title>2º Via DAM</title>
 </head>
 <body>
-    <header class="navbar navbar-expand-sm py-3"> 
-        <div class="container">
-            <div class="nav-brand">
-                <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
-            </div>
-            <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav-list">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div id="nav-list" class="navbar-collapse collapse justify-content-end">
-                <ul class="navbar-nav d-flex align-items-end">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Solicitar acesso</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Redefinir senha</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="ag-login.html" class="nav-link">Sair</a>
-                    </li>
-                </ul>
+    <header class="py-3"> 
+        <div class="container column align-items-center">
+            <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
+            <div>
+                <button class="a11y-button">
+                    <i class="bi bi-zoom-out"></i>
+                </button>
+                <button class="a11y-button">
+                    <i class="bi bi-circle-half"></i>
+                </button>
+                <button class="a11y-button">
+                    <i class="bi bi-zoom-in"></i>
+                </button>
             </div>
         </div>
     </header>
     <main class="container">
-        <h3>2º Via do Documento de Arrecadação Municipal</h3>
+        <div class="column align-items-center py-3">
+            <div class="gov-logo--container">
+                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
+            </div>
+            <div class="column align-items-center gap-2">
+                <div class="user-text">
+                    <p class="text-end">Olá, 
+                        <span class="user-name">user</span>
+                    </p>
+                    <p class="text-end">lorem ipsum</p>
+                </div>
+                <i class="bi bi-person-fill"></i>
+            </div>
+        </div>
+        <div class="column align-items-start">
+            <h6 class="grid-title">2ª Via do Documento de Arrecadação Municipal</h6>
+            <div class="filter-btn d-flex gap-1">
+                <i class="bi bi-funnel"></i>
+                Filtros
+            </div>
+        </div>
+        <select name="tributos" id="select-tributos" class="w-100 p-2 border rounded">
+            <option value="1">lorem ipsum dolor</option>
+            <option value="2">lorem ipsum dolor</option>
+            <option value="3">lorem ipsum dolor</option>
+        </select>
+        <section></section>
     </main>
+    <footer class="container column align-items-center pt-3">
+        <div class="w-50">
+            <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
+            <img src="images/icp-logo.jpg" alt="icp-logo" class="footer-logo">
+        </div>
+        <p class="footer-text">Ágape © Copyright 2024</p>
+    </footer>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
