--- a/ag-dam.html
+++ b/ag-dam.html
@@ -64,6 +64,17 @@
         </div>
         <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+
+        $(function () {
+            $('[data-toggle="popover"]').popover()
+        })
+    </script>
     <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
+
 </body>
 </html>
