--- a/ag-dam.html
+++ b/ag-dam.html
@@ -37,7 +37,7 @@
                     <p class="text-end">Olá, 
                         <span class="user-name">user</span>
                     </p>
-                    <p class="text-end">lorem ipsum</p>
+                    <p class="text-end msg">lorem ipsum</p>
                 </div>
                 <i class="bi bi-person-fill"></i>
             </div>
