--- a/ag-dam.html
+++ b/ag-dam.html
@@ -11,7 +11,7 @@
     <title>2º Via DAM</title>
 </head>
 <body>
-    <header class="py-2"> 
+    <header class="py-3"> 
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="column align-items-center py-2">
+        <div class="column align-items-center py-3">
             <div class="gov-logo--container">
                 <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
@@ -61,6 +61,11 @@
             <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
         </div>
     </main>
+    <aside class="sidebar">
+        <button class="close-btn">
+            <i class="bi bi-x-lg"></i>
+        </button>
+    </aside>
     <footer class="container column align-items-center pt-2">
         <div class="w-50">
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
