--- a/ag-dam.html
+++ b/ag-dam.html
@@ -61,11 +61,11 @@
             <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
         </div>
     </main>
-    <aside class="sidebar">
+    <!-- <aside class="sidebar">
         <button class="close-btn">
             <i class="bi bi-x-lg"></i>
         </button>
-    </aside>
+    </aside> -->
     <footer class="container column align-items-center pt-2">
         <div class="w-50">
             <img src="images/lgpd-logo.png" alt="lgpd-logo" class="footer-logo">
